fix(css): cardContainer overflow-y scroll to auto

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ header button:hover{
     flex-wrap: wrap;
     justify-content: space-between;
     height: calc( 100vh - 170px ); 
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .userCard{
